Fixed layout issue, rearrange grphics.

--- a/css/imageSlide.css
+++ b/css/imageSlide.css
@@ -30,16 +30,22 @@ body {
 .carousel .item {
   height: 100%;
   background-color: #777;
+  
 }
 
 .graphs {
   position: absolute ;
   display:block; 
-  padding: 30px ;
+  padding: 30px 100px ;
   margin: 0px auto; 
   object-fit: cover ;
   width: 100vw; 
   height: 100vh;
+}
+
+.bubble-svg {
+  display:block; 
+  margin: auto; 
 }
 
 .carousel-inner > .item > img {
@@ -49,7 +55,9 @@ body {
   height: 100%;
 }
 
-
+.carousel-control {
+  width:50px;
+}
 
 
 
